<resources>
    <string name="app_name">LibraryApp</string>
    <string name="card_stars">****</string>
    <string name="lbl_card_holder_cap_letters">CARD HOLDER</string>
    <string name="lbl_expires">EXPIRES</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_search_bar">Search Play Books</string>
    <string name="horizontal_line">__________________________________________________________</string>
    <string name="lbl_home">Home</string>
    <string name="lbl_library">Library</string>
    <string name="lbl_download">Download</string>
    <string name="lbl_delete_from_your_library">Delete from your library</string>
    <string name="lbl_add_to_shelves">Add to shelves</string>
    <string name="lbl_mark_as_read">Mark as read</string>
    <string name="rb_recently_opened">Recently opened</string>
    <string name="rb_title">Title</string>
    <string name="rb_author">Author</string>
    <string name="lbl_view_as">View As</string>
    <string name="lbl_sort_by">Sort By</string>
    <string name="rb_list">List</string>
    <string name="rb_large_grid">Large Grid</string>
    <string name="rb_small_grid">Small Grid</string>
    <string name="btn_sort_by">Sort by:</string>
    <string name="lbl_recent">Recent</string>
    <string name="lbl_info_text">Books that you buy on the Google Play website can be read in this app.</string>
    <string name="lbl_add_to_wishlist">Add to wishlist</string>
    <string name="lbl_free_sample">Free sample</string>
    <string name="lbl_books_you_might_like">Books you might like</string>
    <string name="lbl_about_this_ebook">About this ebook</string>
    <string name="lbl_ratings_and_reviews">Ratings and Reviews</string>
    <string name="lbl_published">Published</string>
    <string name="lbl_dash"> - </string>
    <string name="lbl_rating_5">5</string>
    <string name="lbl_rating_4">4</string>
    <string name="lbl_rating_3">3</string>
    <string name="lbl_rating_2">2</string>
    <string name="lbl_rating_1">1</string>
    <string name="lbl_about">About\ </string>
</resources>